JDK 17 + routing DSL + openapi module